--- a/app.json
+++ b/app.json
@@ -10,9 +10,8 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/images/loading.png",
+      "backgroundColor": "#F59E82"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
